@@ -1,6 +1,6 @@
 // AspectJ
 /*******************************************************************************
- * Copyright (c) 2012, 2019 IBM Corporation and others.
+ * Copyright (c) 2012, 2024 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -48,16 +48,13 @@ package org.eclipse.jdt.internal.compiler.ast;
 
 import static org.eclipse.jdt.internal.compiler.ast.ExpressionContext.INVOCATION_CONTEXT;
 
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
 import org.eclipse.jdt.core.compiler.CategorizedProblem;
 import org.eclipse.jdt.core.compiler.CharOperation;
-import org.eclipse.jdt.core.compiler.IProblem;
 import org.eclipse.jdt.internal.compiler.ASTVisitor;
 import org.eclipse.jdt.internal.compiler.ClassFile;
 import org.eclipse.jdt.internal.compiler.CompilationResult;
@@ -72,36 +69,9 @@ import org.eclipse.jdt.internal.compiler.flow.UnconditionalFlowInfo;
 import org.eclipse.jdt.internal.compiler.impl.CompilerOptions;
 import org.eclipse.jdt.internal.compiler.impl.Constant;
 import org.eclipse.jdt.internal.compiler.impl.ReferenceContext;
-import org.eclipse.jdt.internal.compiler.lookup.AnnotationBinding;
-import org.eclipse.jdt.internal.compiler.lookup.Binding;
-import org.eclipse.jdt.internal.compiler.lookup.BlockScope;
-import org.eclipse.jdt.internal.compiler.lookup.ClassScope;
-import org.eclipse.jdt.internal.compiler.lookup.ExtraCompilerModifiers;
-import org.eclipse.jdt.internal.compiler.lookup.InferenceContext18;
-import org.eclipse.jdt.internal.compiler.lookup.IntersectionTypeBinding18;
-import org.eclipse.jdt.internal.compiler.lookup.LocalTypeBinding;
-import org.eclipse.jdt.internal.compiler.lookup.LocalVariableBinding;
-import org.eclipse.jdt.internal.compiler.lookup.LookupEnvironment;
-import org.eclipse.jdt.internal.compiler.lookup.MethodBinding;
-import org.eclipse.jdt.internal.compiler.lookup.MethodScope;
-import org.eclipse.jdt.internal.compiler.lookup.ParameterizedGenericMethodBinding;
-import org.eclipse.jdt.internal.compiler.lookup.ParameterizedTypeBinding;
-import org.eclipse.jdt.internal.compiler.lookup.PolyTypeBinding;
-import org.eclipse.jdt.internal.compiler.lookup.ProblemMethodBinding;
-import org.eclipse.jdt.internal.compiler.lookup.ProblemReasons;
-import org.eclipse.jdt.internal.compiler.lookup.ReferenceBinding;
-import org.eclipse.jdt.internal.compiler.lookup.Scope;
-import org.eclipse.jdt.internal.compiler.lookup.SourceTypeBinding;
-import org.eclipse.jdt.internal.compiler.lookup.Substitution;
-import org.eclipse.jdt.internal.compiler.lookup.Substitution.NullSubstitution;
-import org.eclipse.jdt.internal.compiler.lookup.SyntheticArgumentBinding;
-import org.eclipse.jdt.internal.compiler.lookup.SyntheticMethodBinding;
-import org.eclipse.jdt.internal.compiler.lookup.TagBits;
-import org.eclipse.jdt.internal.compiler.lookup.TypeBinding;
-import org.eclipse.jdt.internal.compiler.lookup.TypeConstants;
-import org.eclipse.jdt.internal.compiler.lookup.TypeIds;
-import org.eclipse.jdt.internal.compiler.lookup.WildcardBinding;
+import org.eclipse.jdt.internal.compiler.lookup.*;
 import org.eclipse.jdt.internal.compiler.lookup.Scope.Substitutor;
+import org.eclipse.jdt.internal.compiler.lookup.Substitution.NullSubstitution;
 import org.eclipse.jdt.internal.compiler.parser.Parser;
 import org.eclipse.jdt.internal.compiler.problem.AbortCompilation;
 import org.eclipse.jdt.internal.compiler.problem.AbortCompilationUnit;
@@ -109,7 +79,6 @@ import org.eclipse.jdt.internal.compiler.problem.AbortMethod;
 import org.eclipse.jdt.internal.compiler.problem.AbortType;
 import org.eclipse.jdt.internal.compiler.problem.ProblemSeverities;
 
-@SuppressWarnings({"rawtypes", "unchecked"})
 public class LambdaExpression extends FunctionalExpression implements IPolyExpression, ReferenceContext, ProblemSeverities {
 	public Argument [] arguments;
 	private TypeBinding [] argumentTypes;
@@ -129,9 +98,8 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 	public boolean hasOuterClassMemberReference = false;
 	private int outerLocalVariablesSlotSize = 0;
 	private boolean assistNode = false;
-	private boolean hasIgnoredMandatoryErrors = false;
 	private ReferenceBinding classType;
-	private Set thrownExceptions;
+	private Set<TypeBinding> thrownExceptions;
 	private static final SyntheticArgumentBinding [] NO_SYNTHETIC_ARGUMENTS = new SyntheticArgumentBinding[0];
 	private static final Block NO_BODY = new Block(0);
 	private HashMap<TypeBinding, LambdaExpression> copiesPerTargetType;
@@ -141,6 +109,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 	public boolean argumentsTypeVar = false;
 	int firstLocalLocal; // analysis index of first local variable (if any) post parameter(s) in the lambda; ("local local" as opposed to "outer local")
 
+	private List<ClassScope> scopesInEarlyConstruction;
 
 	public LambdaExpression(CompilationResult compilationResult, boolean assistNode, boolean requiresGenericSignature) {
 		super(compilationResult);
@@ -237,7 +206,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 		}
 		int invokeDynamicNumber = codeStream.classFile.recordBootstrapMethod(this);
 		codeStream.invokeDynamic(invokeDynamicNumber, (this.shouldCaptureInstance ? 1 : 0) + this.outerLocalVariablesSlotSize, 1, this.descriptor.selector, signature.toString().toCharArray(),
-				this.resolvedType.id, this.resolvedType);
+				this.resolvedType);
 		if (!valueRequired)
 			codeStream.pop();
 		codeStream.recordPositionsFrom(pc, this.sourceStart);
@@ -288,6 +257,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 				return new PolyTypeBinding(this);
 			}
 		}
+		this.scopesInEarlyConstruction = blockScope.collectClassesBeingInitialized();
 
 		MethodScope methodScope = blockScope.methodScope();
 		this.scope = new MethodScope(blockScope, this, methodScope.isStatic, methodScope.lastVisibleFieldID);
@@ -583,7 +553,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 			this.body.analyseCode(this.scope,
 									 ehfc = new ExceptionInferenceFlowContext(null, this, Binding.NO_EXCEPTIONS, null, this.scope, FlowInfo.DEAD_END),
 									 UnconditionalFlowInfo.fakeInitializedFlowInfo(this.firstLocalLocal, this.scope.referenceType().maxFieldCount));
-			this.thrownExceptions = ehfc.extendedExceptions == null ? Collections.emptySet() : new HashSet<TypeBinding>(ehfc.extendedExceptions);
+			this.thrownExceptions = ehfc.extendedExceptions == null ? Set.of() : Set.copyOf(ehfc.extendedExceptions);
 		} catch (Exception e) {
 			// drop silently.
 		} finally {
@@ -630,12 +600,16 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 					this.scope.problemReporter().shouldReturn(returnTypeBinding, this);
 				}
 			}
-		} else { // Expression
-			if (currentScope.compilerOptions().isAnnotationBasedNullAnalysisEnabled
-					&& lambdaInfo.reachMode() == FlowInfo.REACHABLE)
-			{
-				Expression expression = (Expression)this.body;
-				checkAgainstNullAnnotation(flowContext, expression, flowInfo, expression.nullStatus(lambdaInfo, flowContext));
+		} else if (this.body instanceof Expression expression ){
+			if (lambdaInfo.reachMode() == FlowInfo.REACHABLE) {
+				CompilerOptions compilerOptions = currentScope.compilerOptions();
+				if (compilerOptions.isAnnotationBasedNullAnalysisEnabled) {
+					checkAgainstNullAnnotation(flowContext, expression, flowInfo, expression.nullStatus(lambdaInfo, flowContext));
+				}
+				if (compilerOptions.analyseResourceLeaks) {
+					long owningTagBits = this.descriptor.tagBits & TagBits.AnnotationOwningMASK;
+					ReturnStatement.anylizeCloseableReturnExpression(expression, currentScope, owningTagBits, flowContext, flowInfo);
+				}
 			}
 		}
 		return flowInfo;
@@ -768,6 +742,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 		return printExpression(tab, output, false);
 	}
 
+	@Override
 	public StringBuilder printExpression(int tab, StringBuilder output, boolean makeShort) {
 		int parenthesesCount = (this.bits & ASTNode.ParenthesizedMASK) >> ASTNode.ParenthesizedSHIFT;
 		String suffix = ""; //$NON-NLS-1$
@@ -817,17 +792,6 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 	public MethodScope getScope() {
 		return this.scope;
-	}
-
-	private boolean enclosingScopesHaveErrors() {
-		Scope skope = this.enclosingScope;
-		while (skope != null) {
-			ReferenceContext context = skope.referenceContext();
-			if (context != null && context.hasErrors())
-				return true;
-			skope = skope.parent;
-		}
-		return false;
 	}
 
 	private void analyzeShape() { // Simple minded analysis for code assist & potential compatibility.
@@ -1033,8 +997,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 			if (!requireExceptionAnalysis)
 				return copy;
 			if (copy.thrownExceptions == null)
-				if (!copy.hasIgnoredMandatoryErrors && !enclosingScopesHaveErrors())
-					copy.analyzeExceptions();
+				copy.analyzeExceptions();
 			return copy;
 		} finally {
 			this.enclosingScope.problemReporter().switchErrorHandlingPolicy(oldPolicy);
@@ -1242,45 +1205,9 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 		}
 	}
 
-	@Override
-	public void tagAsHavingIgnoredMandatoryErrors(int problemId) {
-		switch (problemId) {
-			// 15.27.3 requires exception throw related errors to not influence congruence. Other errors should. Also don't abort shape analysis.
-			case IProblem.UnhandledExceptionOnAutoClose:
-			case IProblem.UnhandledExceptionInDefaultConstructor:
-			case IProblem.UnhandledException:
-				return;
-			/* The following structural problems can occur only because of target type imposition. Filter, so we can distinguish inherent errors
-			   in explicit lambdas. This is to help decide whether to proceed with data/control flow analysis to discover shape. In case of inherent
-			   errors, we will not call analyze code as it is not prepared to analyze broken programs.
-			*/
-			case IProblem.VoidMethodReturnsValue:
-			case IProblem.ShouldReturnValueHintMissingDefault:
-			case IProblem.ShouldReturnValue:
-			case IProblem.ReturnTypeMismatch:
-			case IProblem.IncompatibleLambdaParameterType:
-			case IProblem.lambdaParameterTypeMismatched:
-			case IProblem.lambdaSignatureMismatched:
-			case IProblem.LambdaDescriptorMentionsUnmentionable:
-			case IProblem.TargetTypeNotAFunctionalInterface:
-			case IProblem.illFormedParameterizationOfFunctionalInterface:
-			case IProblem.NoGenericLambda:
-				return;
-			default:
-				this.hasIgnoredMandatoryErrors = true;
-				MethodScope enclosingLambdaScope = this.scope == null ? null : this.scope.enclosingLambdaScope();
-				while (enclosingLambdaScope != null) {
-					LambdaExpression enclosingLambda = (LambdaExpression) enclosingLambdaScope.referenceContext;
-					enclosingLambda.hasIgnoredMandatoryErrors = true;
-					enclosingLambdaScope = enclosingLambdaScope.enclosingLambdaScope();
-				}
-				return;
-		}
-	}
-
 	public Set<TypeBinding> getThrownExceptions() {
 		if (this.thrownExceptions == null)
-			return Collections.emptySet();
+			return Set.of();
 		return this.thrownExceptions;
 	}
 
@@ -1340,18 +1267,30 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 			}
 		}
 		codeStream.pushPatternAccessTrapScope(this.scope);
-		if (this.body instanceof Block) {
-			this.body.generateCode(this.scope, codeStream);
-			if ((this.bits & ASTNode.NeedFreeReturn) != 0) {
-				codeStream.return_();
-			}
-		} else {
-			Expression expression = (Expression) this.body;
-			expression.generateCode(this.scope, codeStream, true);
-			if (this.binding.returnType == TypeBinding.VOID) {
-				codeStream.return_();
+		if (this.scopesInEarlyConstruction != null) {
+			// JEP 482: restore early construction context info into scopes:
+			for (ClassScope classScope : this.scopesInEarlyConstruction)
+				classScope.insideEarlyConstructionContext = true;
+		}
+		try {
+			if (this.body instanceof Block) {
+				this.body.generateCode(this.scope, codeStream);
+				if ((this.bits & ASTNode.NeedFreeReturn) != 0) {
+					codeStream.return_();
+				}
 			} else {
-				codeStream.generateReturnBytecode(expression);
+				Expression expression = (Expression) this.body;
+				expression.generateCode(this.scope, codeStream, true);
+				if (this.binding.returnType == TypeBinding.VOID) {
+					codeStream.return_();
+				} else {
+					codeStream.generateReturnBytecode(expression);
+				}
+			}
+		} finally {
+			if (this.scopesInEarlyConstruction != null) {
+				for (ClassScope classScope : this.scopesInEarlyConstruction)
+					classScope.insideEarlyConstructionContext = false;
 			}
 		}
 		// See https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1796#issuecomment-1933458054
@@ -1471,7 +1410,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 	public TypeBinding[] getMarkerInterfaces() {
 		if (this.expectedType instanceof IntersectionTypeBinding18) {
-			Set markerBindings = new LinkedHashSet();
+			Set<TypeBinding> markerBindings = new LinkedHashSet<>();
 			IntersectionTypeBinding18 intersectionType = (IntersectionTypeBinding18)this.expectedType;
 			TypeBinding[] intersectionTypes = intersectionType.intersectingTypes;
 			TypeBinding samType = intersectionType.getSAMType(this.enclosingScope);
@@ -1485,7 +1424,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 				markerBindings.add(typeBinding);
 			}
 			if (markerBindings.size() > 0) {
-				return (TypeBinding[])markerBindings.toArray(new TypeBinding[markerBindings.size()]);
+				return markerBindings.toArray(TypeBinding[]::new);
 			}
 		}
 		return null;
