@@ -12,10 +12,9 @@
  *******************************************************************************/
 package org.eclipse.jdt.core.tests.compiler.regression;
 
+import junit.framework.Test;
 import org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants;
 import org.eclipse.jdt.internal.compiler.impl.CompilerOptions;
-
-import junit.framework.Test;
 
 public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 
@@ -38,11 +37,8 @@ public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 		} else if (options.sourceLevel < ClassFileConstants.JDK22) {
 			message = "'_' is a keyword from source level 9 onwards, cannot be used as identifier";
 			errorLevel = "ERROR";
-		} else if (options.sourceLevel == ClassFileConstants.JDK22) {
+		} else  {
 			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
-			errorLevel = "ERROR";
-		} else {
-			message = "Unnamed Patterns and Variables is a preview feature and disabled by default. Use --enable-preview to enable";
 			errorLevel = "ERROR";
 		}
 
@@ -74,11 +70,8 @@ public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 		} else if (options.sourceLevel < ClassFileConstants.JDK22) {
 			message = "'_' is a keyword from source level 9 onwards, cannot be used as identifier";
 			errorLevel = "ERROR";
-		} else if (options.sourceLevel == ClassFileConstants.JDK22) {
-			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
-			errorLevel = "ERROR";
 		} else {
-			message =  "Unnamed Patterns and Variables is a preview feature and disabled by default. Use --enable-preview to enable";
+			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
 			errorLevel = "ERROR";
 		}
 
@@ -109,11 +102,8 @@ public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 		} else if (options.sourceLevel < ClassFileConstants.JDK22) {
 			message = "'_' is a keyword from source level 9 onwards, cannot be used as identifier";
 			errorLevel = "ERROR";
-		} else if (options.sourceLevel == ClassFileConstants.JDK22) {
-			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
-			errorLevel = "ERROR";
 		} else {
-			message =  "Unnamed Patterns and Variables is a preview feature and disabled by default. Use --enable-preview to enable";
+			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
 			errorLevel = "ERROR";
 		}
 
@@ -146,11 +136,8 @@ public class UseOfUnderscoreTest extends AbstractBatchCompilerTest {
 		} else if (options.sourceLevel < ClassFileConstants.JDK22) {
 			message = "'_' is a keyword from source level 9 onwards, cannot be used as identifier";
 			errorLevel = "ERROR";
-		} else if (options.sourceLevel == ClassFileConstants.JDK22) {
-			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
-			errorLevel = "ERROR";
 		} else {
-			message =  "Unnamed Patterns and Variables is a preview feature and disabled by default. Use --enable-preview to enable";
+			message = "As of release 22, '_' is only allowed to declare unnamed patterns, local variables, exception parameters or lambda parameters";
 			errorLevel = "ERROR";
 		}
 
